table creation using POST API

--- a/PostDataTABLE.html
+++ b/PostDataTABLE.html
@@ -34,7 +34,7 @@
             </tbody>
         
     </table>
-    <script src="postTable.js"  type="module"></script>
+    <script src="postTable.js"  ></script>
     
 </body>
 </html>
